r26: Prevent spaces collapsing in the text snippets

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     font-family: monospace;
     font-size: 8pt;
     text-align: left;
+    white-space: pre-wrap;
     width: 49%;
     border: 1px dashed __border__;
     padding: 0.3em;
